tester_ft/log/compile_error_vec_20.txt
-VECTOR ASSIGN RANGE TEST-

./tmp/outfile_vec_20.cpp:33:8: error: no member named 'assign' in 'ft::vector<int>'
                v2_r.assign(v2.begin(), v2.end());
                ~~~~ ^
./tmp/outfile_vec_20.cpp:33:18: error: no member named 'begin' in 'ft::vector<int>'
                v2_r.assign(v2.begin(), v2.end());
                            ~~ ^
./tmp/outfile_vec_20.cpp:33:30: error: no member named 'end' in 'ft::vector<int>'
                v2_r.assign(v2.begin(), v2.end());
                                        ~~ ^
./tmp/outfile_vec_20.cpp:38:48: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1_r.begin(),v1_r.end(),v2_r.begin()))
                                                        ~~~~ ^
./tmp/outfile_vec_20.cpp:60:8: error: no member named 'assign' in 'ft::vector<int>'
                v2_r.assign(v2.begin(), v2.end());
                ~~~~ ^
./tmp/outfile_vec_20.cpp:60:18: error: no member named 'begin' in 'ft::vector<int>'
                v2_r.assign(v2.begin(), v2.end());
                            ~~ ^
./tmp/outfile_vec_20.cpp:60:30: error: no member named 'end' in 'ft::vector<int>'
                v2_r.assign(v2.begin(), v2.end());
                                        ~~ ^
7 errors generated.
